# drf-auth

./: db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  readme.md  requirements.txt
phons/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
phons/migrations/: 0001_initial.py
shop/: sample.env  settings.py  urls.py
